# pi-camry-integration

./: .gitignore  README.md  guide.html  pyproject.toml
configs/: camry.example.yaml  environment.example
docs/: SHOPPING_LIST.md
scripts/: bench_test.py  camry-daemon.service  install.sh
src/pi_camry/: __init__.py  cli.py  main.py
src/pi_camry/audio/: __init__.py  assistant.py  whisper_stt.py
src/pi_camry/camera/: picamera2_backend.py  recorder.py
src/pi_camry/connectivity/: lte.py
src/pi_camry/core/: __init__.py  config.py
src/pi_camry/display/: __init__.py  can_bridge.py  dashboard.py  hdmi_sink.py  joybring.py  radio.py  steering_wheel.py  touch_input.py
src/pi_camry/gpio/: controller.py
src/pi_camry/gps/: tracker.py
src/pi_camry/imu/: sensor.py
src/pi_camry/modern_vehicle/: __init__.py  can_multibus.py  driver_monitor.py  interior_sensing.py  radar_fusion.py  tpms_direct.py  uds_client.py
src/pi_camry/obd/: __init__.py  interface.py
src/pi_camry/sensors/: rain_sensor.py  rtk_gps.py  thermal_camera.py  ultrasonic_array.py
src/pi_camry/storage/: manager.py
src/pi_camry/telegram/: bot.py
tests/: conftest.py  test_audio.py  test_camera.py  test_core.py  test_display.py  test_gpio.py  test_gps.py  test_imu.py  test_modern_vehicle.py  test_new_sensors.py  test_obd.py  test_storage.py  test_telegram.py
