[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-camry-integration"
version = "0.1.0"
description = "Hermes Agent integration for Raspberry Pi 5 in 1996 Toyota Camry"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Walker Kirkpatrick"},
]
keywords = ["raspberry-pi", "obd-ii", "camry", "vehicle-integration", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # OBD-II communication — pyserial-backed, async-capable
    "obd>=0.7.2",
    # GPIO control — Raspberry Pi 5 compatible (lgpio preferred over RPi.GPIO)
    "lgpio>=0.2.2 ; platform_machine=='aarch64'",
    # Camera — PiCamera2 for libcamera on Pi 5
    "picamera2>=0.3.18 ; platform_machine=='aarch64'",
    # GPS — pyserial-based NMEA parser
    "pynmea2>=1.19.0",
    "pyserial>=3.5",
    # IMU / I2C — smbus2 for MPU-6050/9250
    "smbus2>=0.4.2",
    # Audio — PyAudio for microphone input
    "pyaudio>=0.2.14",
    # Async core
    "aiohttp>=3.9.0",
    "aiosignal>=1.3.1",
    # Cryptography for encrypted video storage
    "cryptography>=42.0.0",
    # Configuration and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Scheduling and timing
    "schedule>=1.2.0",
    # Telegram bot integration
    "python-telegram-bot>=20.7",
    # Data handling
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    # Image processing for camera overlays
    "Pillow>=10.1.0",
    # Disk monitoring for M.2 storage
    "psutil>=5.9.0",
    # SQLite utilities
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
camry-daemon = "pi_camry.main:main"
camry-obd = "pi_camry.cli:obd_cli"
camry-camera = "pi_camry.cli:camera_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_camry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
